syntax = "proto3";

package exec;

option go_package = "pipeline-manager/server/";

service ExecService {
    rpc ExecuteCommand (ExecCommand) returns (ExecResult) {}
}

message ExecCommand {
    string command = 1;
}

message ExecResult {
	bool result = 2;
	string errorMessage = 3;
}